--- a/client/src/components/views/OrderSent/OrderSent.module.scss
+++ b/client/src/components/views/OrderSent/OrderSent.module.scss
@@ -61,13 +61,13 @@
         height: inherit;
         background: $color-important;
         position: absolute;
-        animation: mainBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
+        animation: mainBlock 2s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
         display: flex;
       }
 
       h1 {
         font-family: $font-text;
-        color:$color-navyblue;
+        color: $color-navyblue;
         font-size: 64px;
         -webkit-animation: mainFadeIn 2s forwards;
         -o-animation: mainFadeIn 2s forwards;
@@ -93,7 +93,7 @@
         height: inherit;
         background: $color-importantDark;
         position: absolute;
-        animation: secBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
+        animation: secBlock 2s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
         animation-delay: 2s;
         display: flex;
       }
@@ -103,7 +103,7 @@
         animation-delay: 3.2s;
         opacity: 0;
         font-family: $font-text;
-        color:$color-navyblue;
+        color: $color-navyblue;
         font-size: 24px;
         text-transform: uppercase;
         letter-spacing: 5px;
@@ -116,12 +116,10 @@
   0% {
     width: 0%;
     left: 0;
-
   }
   50% {
     width: 100%;
     left: 0;
-
   }
   100% {
     width: 0;
@@ -133,12 +131,10 @@
   0% {
     width: 0%;
     left: 0;
-
   }
   50% {
     width: 100%;
     left: 0;
-
   }
   100% {
     width: 0;
@@ -155,7 +151,6 @@
   }
 }
 
-
 @keyframes popIn {
   0% {
     width: 0px;
@@ -171,24 +166,23 @@
     opacity: 1;
     bottom: 45px;
   }
-   65% {
-      width: 7px;
+  65% {
+    width: 7px;
     height: 7px;
-      bottom: 0px;
-      width: 15px
-   }
-   80% {
-      width: 10px;
+    bottom: 0px;
+    width: 15px;
+  }
+  80% {
+    width: 10px;
     height: 10px;
-      bottom: 20px
-   }
+    bottom: 20px;
+  }
   100% {
     width: 7px;
     height: 7px;
     background: #e9d856;
     border: 0px solid #222;
     bottom: 13px;
-
   }
 }
 
@@ -204,30 +198,204 @@
 //////////////////////////////////////////////////////////////////////////////////////////// Media query
 @media (max-width: 767px) {
   //sm
+  .backToHomepage {
+    margin: 20px 0 0 12px;
+    padding: 4px 8px;
+    font-size: 28px;
+  }
 
+  .container {
+    margin-left: 20px;
+    width: 80vw;
+    height: 50vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .box {
+      width: 80vw;
+
+      .title {
+        h1 {
+          font-size: 36px;
+        }
+      }
+
+      .role p {
+        font-size: 12px;
+        letter-spacing: 2px;
+      }
+    }
+  }
 }
 
 @media (max-width: 411px) {
   // pixel 2 xl
+  .backToHomepage {
+    margin: 20px 0 0 12px;
+    padding: 4px 8px;
+    font-size: 28px;
+  }
 
+  .container {
+    margin-left: 20px;
+    width: 80vw;
+    height: 50vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .box {
+      width: 80vw;
+
+      .title {
+        h1 {
+          font-size: 36px;
+        }
+      }
+
+      .role p {
+        font-size: 12px;
+        letter-spacing: 2px;
+      }
+    }
+  }
 }
 
 @media (max-width: 568px) {
   // sm poziom
+  .backToHomepage {
+    margin: 20px 0 0 12px;
+    padding: 4px 8px;
+    font-size: 28px;
+  }
 
+  .container {
+    margin-left: 20px;
+    width: 80vw;
+    height: 50vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .box {
+      width: 80vw;
+
+      .title {
+        h1 {
+          font-size: 36px;
+        }
+      }
+
+      .role p {
+        font-size: 12px;
+        letter-spacing: 2px;
+      }
+    }
+  }
 }
 
 @media (max-width: 768px) {
   //iPad
+  .backToHomepage {
+    margin: 20px 0 0 12px;
+    padding: 4px 8px;
+    font-size: 28px;
+  }
 
+  .container {
+    margin-left: 20px;
+    width: 80vw;
+    height: 50vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .box {
+      width: 80vw;
+
+      .title {
+        h1 {
+          font-size: 36px;
+        }
+      }
+
+      .role p {
+        font-size: 12px;
+        letter-spacing: 2px;
+      }
+    }
+  }
 }
 
 @media (max-width: 992px) {
   //lg
+  .backToHomepage {
+    margin: 20px 0 0 12px;
+    padding: 4px 8px;
+    font-size: 28px;
+  }
 
+  .container {
+    margin-left: 20px;
+    width: 80vw;
+    height: 50vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .box {
+      width: 80vw;
+
+      .title {
+        h1 {
+          font-size: 36px;
+        }
+      }
+
+      .role p {
+        font-size: 12px;
+        letter-spacing: 2px;
+      }
+    }
+  }
 }
 
 @media (max-width: 1200px) {
   //xl
- 
+  .backToHomepage {
+    margin: 20px 0 0 12px;
+    padding: 4px 8px;
+    font-size: 28px;
+  }
+
+  .container {
+    margin-left: 20px;
+    width: 80vw;
+    height: 50vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .box {
+      width: 80vw;
+
+      .title {
+        h1 {
+          font-size: 36px;
+        }
+      }
+
+      .role p {
+        font-size: 12px;
+        letter-spacing: 2px;
+      }
+    }
+  }
 }
