--- a/client/src/components/layout/Footer/Footer.module.scss
+++ b/client/src/components/layout/Footer/Footer.module.scss
@@ -12,15 +12,23 @@
   display: flex;
   justify-content: center;
   padding: 40px 0;
-  font-size: 32px;
   position: relative;
   z-index: 1;
+  i {
+    color: $color-navyblue;
+    font-size: 16px;
+    padding: 0 2px;
+    color: $color-importantDark;
+  }
 }
 
 .links {
-  color: $color-navyblue;
-  //padding: 0 24px 0 24px;
   font-family: $font-text;
+  i {
+    font-size: 32px;
+    color: $color-navyblue;
+  }
+
   &:hover {
     text-decoration: none;
     color: $color-navyblue;
@@ -47,6 +55,23 @@
   }
 }
 
+.letter {
+  display: inline-flex;
+  height: 30px;
+  width: 10px;
+  animation: letter 3s ease-in-out infinite alternate;
+}
+@keyframes letter {
+  0%,
+  30% {
+    width: 1vw;
+  }
+  70%,
+  100% {
+    width: 3vw;
+  }
+}
+
 //////////////////////////////////////////////////////////////////////////////////////////// Media query
 
 @media (max-width: 767px) {
@@ -55,7 +80,6 @@
     font-size: 20px;
     position: absolute;
     top: 50%;
-    //left: 25%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
   }
@@ -65,12 +89,12 @@
   }
 }
 
-@media (max-width: 992px) { //lg
+@media (max-width: 992px) {
+  //lg
   .allLinks {
     font-size: 20px;
     position: absolute;
     top: 50%;
-    left: 45%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
   }
@@ -79,7 +103,3 @@
     display: none;
   }
 }
-
-// @media (max-width: 1200px) { //xl
-
-// }
