--- a/client/src/components/views/Basket/Basket.module.scss
+++ b/client/src/components/views/Basket/Basket.module.scss
@@ -3,6 +3,7 @@
 .root {
   padding: 24px 0 48px 48px;
   background: $color-lightblue;
+  min-height: 72vh;
 }
 
 .line {
@@ -127,6 +128,7 @@
       margin-left: auto;
       i {
         padding: 0 4px;
+        color: $color-navyblue;
         &:hover {
           color: $color-important;
         }
