--- a/client/src/components/views/OrderSent/OrderSent.module.scss
+++ b/client/src/components/views/OrderSent/OrderSent.module.scss
@@ -103,7 +103,7 @@
         animation-delay: 3.2s;
         opacity: 0;
         font-family: $font-text;
-        color: $color-navyblue;
+        color: $color-darkblue;
         font-size: 24px;
         text-transform: uppercase;
         letter-spacing: 5px;
